small fixes to nav, typo in landing page, prepping for final merger with o11y-recpies

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -53,9 +53,10 @@ nav:
     # - Tracing with ADOT: tools/adot-traces.md
     - Tracing with AWS X-Ray: tools/xray.md
 
-  # Recipes are currently not all mapped - this is a WIP
   - Curated recipes:
-    - recipes/index.md
+    - Recipes: recipes/index.md
+    - Dimensions: recipes/dimensions.md
+    - Telemetry: recipes/telemetry.md
     - By Compute:
       - recipes/apprunner.md
       - recipes/eks.md
