--- a/.github/workflows/cw-metric-stream-exporter-docker.yml
+++ b/.github/workflows/cw-metric-stream-exporter-docker.yml
@@ -21,7 +21,8 @@ jobs:
       with:
         path: sandbox/CWMetricStreamExporter
 
-    - run: ls
+    - name: list files
+      run: ls
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -48,4 +49,3 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.run_number }},ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
-Footer
