Fix dir for docker

--- a/.github/workflows/cw-metric-stream-exporter-docker.yml
+++ b/.github/workflows/cw-metric-stream-exporter-docker.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         path: sandbox/CWMetricStreamExporter
 
-    - name: list files
-      run: ls
+    - name: Go to the right dir
+      run: cd sandbox/CWMetricStreamExporter
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
