--- a/.github/workflows/cw-metric-stream-exporter-docker.yml
+++ b/.github/workflows/cw-metric-stream-exporter-docker.yml
@@ -11,28 +11,26 @@ permissions:
   packages: write
   checks: read
 
+env:
+  PROJECT_DIR: ./sandbox/CWMetricStreamExporter
+
 jobs:   
   build:
     runs-on: ubuntu-latest
 
     steps:    
     - name: Checkout the code
-      uses: actions/checkout@v2
-      with:
-        path: sandbox/CWMetricStreamExporter
-
-    - name: Go to the right dir
-      run: cd sandbox/CWMetricStreamExporter
+      uses: actions/checkout@v3
 
     - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      uses: docker/setup-qemu-action@v2
 
     - name: Set up Docker Buildx
       id: buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
     - name: Log in to Github Registry
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
@@ -42,10 +40,9 @@ jobs:
       run: echo ${{ steps.buildx.outputs.platforms }}
     
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
-        context: .
-        file: ./Dockerfile
+        context: ${{ env.PROJECT_DIR }}
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.run_number }},ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:latest
