--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -36,9 +36,7 @@ nav:
     # - Creating an observability strategy: guides/strategy.md
 
   - Data types:
-    - Logs: 
-      - Logs: signals/logs/index.md
-      - CloudWatch Logs Insights Example Queries: signals/logs/logs-insights-examples.md
+    - Logs: signals/logs.md
     - Metrics: signals/metrics.md
     - Traces: signals/traces.md
     - Alarms: signals/alarms.md
@@ -53,7 +51,9 @@ nav:
     - Dashboards: tools/dashboards.md
     # - Embedded Metric Format: tools/emf.md
     - Internet Monitor: tools/internet_monitor.md
-    - Logs: tools/logs.md
+    - Logs: 
+      - Logs: tools/logs/index.md
+      - CloudWatch Logs Insights Example Queries: tools/logs/logs-insights-examples.md
     - Metrics: tools/metrics.md
     - Real User Monitoring: tools/rum.md
     - Synthetic Testing: tools/synthetics.md
