--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -28,6 +28,9 @@ nav:
   - Guides:
     - Best practices overview: guides/index.md
     - Choosing a tracing agent: guides/choosing-a-tracing-agent.md
+    - Operational:
+      - ADOT Collector:
+        - guides/operational/adot-at-scale/operating-adot-collector.md
     # - APM: guides/apm.md
     # - Containers: guides/containers.md
     # - Dashboards: guides/dashboards.md
