--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -16,12 +16,11 @@ theme:
   icon:
     repo: fontawesome/brands/github
   features:
-    - navigation.tabs
     - navigation.tabs.sticky
 
   palette:
-    primary: orange
-    accent: deep orange
+    primary: red
+    accent: red
 
 nav:
   - Home: index.md
