--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -28,6 +28,7 @@ nav:
   - Guides:
     - Best practices overview: guides/index.md
     - Choosing a tracing agent: guides/choosing-a-tracing-agent.md
+    - EC2 Monitoring and Observability: guides/ec2/ec2-monitoring.md  
     # - APM: guides/apm.md
     # - Containers: guides/containers.md
     # - Dashboards: guides/dashboards.md
