--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -27,6 +27,7 @@ nav:
   - Guides:
     - Best practices overview: guides/index.md
     - Choosing a tracing agent: guides/choosing-a-tracing-agent.md
+    - EC2 Monitoring: guides/ec2/ec2-monitoring.md 
     - ECS best practices: 
       - AWS Native:
         - guides/containers/aws-native/ecs/best-practices-metrics-collection-1.md
