--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -34,6 +34,8 @@ nav:
     # - Full-stack: guides/full-stack.md
     # - Databases: guides/databases.md
     # - Creating an observability strategy: guides/strategy.md
+    - Cost optimization:
+      - Using Kubecost: guides/cost-optimization/kubecost.md
 
   - Data types:
     - Logs: signals/logs.md
