--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -52,6 +52,8 @@ nav:
         - Operating at scale: guides/operational/adot-at-scale/operating-adot-collector.md
       - Monitoring for business outcomes: guides/operational/business/monitoring-for-business-outcomes.md
       - Percentiles: guides/operational/business/sla-percentile.md
+      - Alerting:
+        - Prometheus Alert Manager: guides/operational/alerting/amp-alertmgr.md
     
     # - APM: guides/apm.md
     # - Containers: guides/containers.md
