--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -68,12 +68,12 @@ nav:
         - Manually Instrumenting Spring Integration Applications: guides/operational/adot-at-scale/adot-java-spring/adot-java-spring.md
       - Monitoring for business outcomes: guides/operational/business/monitoring-for-business-outcomes.md
       - Percentiles: guides/operational/business/sla-percentile.md
-
       - Key Performance Indicators: guides/operational/business/key-performance-indicators.md
-    
-
       - Alerting:
         - Prometheus Alert Manager: guides/operational/alerting/amp-alertmgr.md
+      - GitOps:
+        - Grafana Operator with Amazon Managed Grafana: guides/operational/gitops-with-amg/gitops-with-amg.md
+
 
     - Partners:
       - Databricks: guides/partners/databricks.md
