--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -73,6 +73,8 @@ nav:
         - Prometheus Alert Manager: guides/operational/alerting/amp-alertmgr.md
       - GitOps:
         - Grafana Operator with Amazon Managed Grafana: guides/operational/gitops-with-amg/gitops-with-amg.md
+      - Dashboards:
+        - CloudWatch Dashboard: tools/cloudwatch-dashboard.md
     
     - Signal collection:
       - Embedded Metric Format: guides/signal-collection/emf.md
