--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -110,6 +110,8 @@ nav:
     - Logs:
       - Logs: tools/logs/index.md
       - CloudWatch Logs Insights Example Queries: tools/logs/logs-insights-examples.md
+      - Data Protection:
+        - CloudWatch Logs Data Protection Policies for SLG/EDU: tools/logs/dataprotection/data-protection-policies.md
     - Metrics: tools/metrics.md
     - Real User Monitoring: tools/rum.md
     - Synthetic Testing: tools/synthetics.md
