--- a/sandbox/CWMetricStreamExporter/cdk/package.json
+++ b/sandbox/CWMetricStreamExporter/cdk/package.json
@@ -11,13 +11,19 @@
     "cdk": "cdk",
     "lint": "eslint lib/**"
   },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.99.0",
+    "constructs": "^10.0.0"
+  },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.124.0",
+    "@aws-cdk/aws-kinesisfirehose-alpha": "2.99.0-alpha.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "2.99.0-alpha.0",
+    "aws-cdk-lib": "^2.99.0",
+    "constructs": "^10.0.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
-    "aws-cdk": "^1.124.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
@@ -28,11 +34,11 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-iam": "^1.124.0",
-    "@aws-cdk/aws-kinesisfirehose": "^1.124.0",
-    "@aws-cdk/aws-kinesisfirehose-destinations": "^1.124.0",
-    "@aws-cdk/core": "^1.124.0",
+    "@aws-cdk/aws-kinesisfirehose-alpha": "2.99.0-alpha.0",
+    "@aws-cdk/aws-kinesisfirehose-destinations-alpha": "2.99.0-alpha.0",
+    "aws-cdk-lib": "^2.99.0",
     "@types/js-yaml": "^4.0.3",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "constructs": "^10.0.0"
   }
 }
