--- a/sandbox/CWMetricStreamExporter/package.json
+++ b/sandbox/CWMetricStreamExporter/package.json
@@ -1,7 +1,7 @@
 {
     "name": "exporter",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "scripts": {
-        "build": "cd lambda && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o main main.go && cd ../cdk && cdk deploy"
+        "build": "cd lambda && GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o bootstrap main.go && cd ../cdk && cdk deploy"
     }
 }
