japanese transrate ver2

--- a/.github/workflows/docs-ci.yaml
+++ b/.github/workflows/docs-ci.yaml
@@ -24,4 +24,5 @@ jobs:
       - run: mkdocs build -f mkdocs.ja.yaml
       - uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
